--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "CSS aziendali FAST-Computing basati su Bootstrap",
   "main": "dist/css/brand.css",
   "scripts": {
-    "build": "npm run build:css && npm run build:css:minified",
-    "build:css": "sass --no-source-map src/scss/brand.scss dist/css/brand.css",
-    "build:css:minified": "sass --no-source-map --style=compressed src/scss/brand.scss dist/css/brand.min.css",
-    "watch": "sass --watch src/scss/brand.scss dist/css/brand.css",
-    "clean": "rm -rf dist"
+    "build": "npm run build:all",
+    "build:all": "npm run build:corporate && npm run build:argos && npm run build:atlas",
+    "build:corporate": "npm run build:corporate:expanded && npm run build:corporate:minified",
+    "build:corporate:expanded": "sass --no-source-map src/scss/corporate/corporate.scss dist/css/corporate.css",
+    "build:corporate:minified": "sass --no-source-map --style=compressed src/scss/corporate/corporate.scss dist/css/corporate.min.css",
+    "build:argos": "npm run build:argos:expanded && npm run build:argos:minified",
+    "build:argos:expanded": "sass --no-source-map src/scss/argos/argos.scss dist/css/argos.css",
+    "build:argos:minified": "sass --no-source-map --style=compressed src/scss/argos/argos.scss dist/css/argos.min.css",
+    "build:atlas": "npm run build:atlas:expanded && npm run build:atlas:minified",
+    "build:atlas:expanded": "sass --no-source-map src/scss/atlas/atlas.scss dist/css/atlas.css",
+    "build:atlas:minified": "sass --no-source-map --style=compressed src/scss/atlas/atlas.scss dist/css/atlas.min.css",
+    "watch:corporate": "sass --watch src/scss/corporate/corporate.scss dist/css/corporate.css",
+    "watch:argos": "sass --watch src/scss/argos/argos.scss dist/css/argos.css",
+    "watch:atlas": "sass --watch src/scss/atlas/atlas.scss dist/css/atlas.css",
+    "clean": "rm -rf dist/css"
   },
   "repository": {
     "type": "git",
