--- a/package.json
+++ b/package.json
@@ -1,7 +1,29 @@
 {
-  "name": "fast-monorepo",
+  "name": "@fast-computing/fast-graphics",
   "version": "0.0.3",
-  "private": true,
+  "main": "packages/tokens/dist/index.js",
+  "types": "packages/tokens/dist/index.d.ts",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "exports": {
+    "./tokens": {
+      "types": "./packages/tokens/dist/index.d.ts",
+      "default": "./packages/tokens/dist/index.js"
+    },
+    "./mui-theme": {
+      "types": "./packages/mui-theme/dist/index.d.ts",
+      "default": "./packages/mui-theme/dist/index.js"
+    },
+    "./ui": {
+      "types": "./packages/ui/dist/index.d.ts",
+      "default": "./packages/ui/dist/index.js"
+    },
+    "./layouts": {
+      "types": "./packages/layouts/dist/index.d.ts",
+      "default": "./packages/layouts/dist/index.js"
+    }
+  },
   "description": "FAST-Computing graphics release repo (@fast/* packages)",
   "workspaces": [
     "packages/*"
@@ -32,6 +54,19 @@
   ],
   "author": "FAST-Computing",
   "license": "MIT",
+  "files": [
+    "packages/*/dist",
+    "packages/*/src",
+    "packages/*/package.json",
+    "packages/*/README.md",
+    "README.md"
+  ],
+  "peerDependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^7.0.0",
+    "react": "^18.0.0 || ^19.0.0"
+  },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
     "@changesets/changelog-github": "^0.5.0",
